Fixed small textbook on mobile

--- a/style.css
+++ b/style.css
@@ -501,8 +501,8 @@ input[type="range"] {
     }
 
     .textbook img{
-    width: 20vw;
-    margin-right: 0px;
+    max-width: 90vw;
+    margin-right: auto;
 
     }
 
